<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly1_id_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/ly1.1_id_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id_userprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/tv_txt_perfil"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_id_nombre"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_profilestyle"
                android:hint="@string/h_nombre_de_usuario"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/et_id_edad"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_profilestyle"
                android:hint="@string/h_edad"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/et_id_estatura"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_profilestyle"
                android:hint="@string/h_estatura"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <EditText
                android:id="@+id/et_id_peso"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_profilestyle"
                android:hint="@string/h_peso"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly1.2_id_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id_ly1.2_profile_maxmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_txt_ly1.1_profile_maxmin"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ly1.2.1_id_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/et_id_ly2.1_profile_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_profilestyle"
                    android:hint="@string/h_min"
                    android:textColorHint="#fff"
                    android:inputType="number"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

                <EditText
                    android:id="@+id/et_id_ly2.1_profile_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_profilestyle"
                    android:hint="@string/h_max"
                    android:textColorHint="#fff"
                    android:inputType="number"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly1.3_id_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id_ly1.3_profile_insulina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_txt_insulina"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_id_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/rb_id_rapida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_txt_Rápida"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_id_ultrarrapida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_txt_UltraRápida"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly1.4_id_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_id_ly1.4_profile_uds_insulina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_txt_uds"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ly1.4.1_id_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/et_udsBasal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_profilestyle"
                    android:hint="@string/h_basal"
                    android:textColorHint="#fff"
                    android:inputType="number"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>

                <EditText
                    android:id="@+id/et_udsRapida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_profilestyle"
                    android:hint="@string/h_rapida"
                    android:textColorHint="#fff"
                    android:inputType="number"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_save_profile"
            android:enabled="true"
            android:focusable="false"
            android:onClick="guardarperfilOnClick"
            android:text="@string/bt_guardar"
            android:textColor="#fff"
            android:layout_marginBottom="20dp" />
    </LinearLayout>
</ScrollView>
