<resources>
    <string name="app_name">UBUDiabetes</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_acerca">Acerca de</string>


    <!--- StringsRegistrorfil -->
    <string name="tv_txt_perfil">Perfil de Usuario</string>
    <string name="h_nombre_de_usuario">Introduce tu nombre</string>
    <string name="h_edad">Introduce tu edad</string>
    <string name="h_basal">Uds I.Basal</string>
    <string name="h_rapida">Uds I.Rápida</string>
    <string name="h_estatura">Introduce tu estatura(cm)</string>
    <string name="h_peso">Introduce tu peso(kg)</string>
    <string name="tv_txt_ly1.1_profile_maxmin">Introduce los valores de glucemia deseados entre 80 y 250 mg/dl</string>
    <string name="h_min">mín.(mg/dl)</string>
    <string name="h_max">máx.(mg/dl)</string>
    <string name="tv_txt_insulina">Insulina del bolo</string>
    <string name="rb_txt_Rápida">Rápida</string>
    <string name="rb_txt_UltraRápida">Ultrarrápida</string>
    <string name="tv_txt_uds">Unidades de insulina</string>
    <string name="bt_guardar">Guardar</string>
    <string name="minmax_incorrecto">Introduce valores min y max de glucemia entre los valores indicados</string>
    <string name="minmax_orden">El valor min de glucemia no puedes ser mayor que el valor máximo</string>
    <string name="textfieldEmpty">Rellene todos los campos</string>
    <string name="noRadioButtonsChecked">Algún elemento sin seleccionar</string>

    <!--- SharedPreferences -->
    <string name="primeraEjecucion">primeraEjecucion</string>
    <string name="nombre">nombre</string>
    <string name="edad">edad</string>
    <string name="estatura">estatura</string>
    <string name="peso">peso</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="udsBasal">udsBasal"</string>
    <string name="udsRapida">udsRapida</string>
    <string name="rapida">rapida</string>
    <string name="ultrarrapida">ultrarrapida</string>
    <string name="glucemia">glucemia</string>
    <string name="lastBackUp">ultimaCopiaSeguridad</string>


    <!--- Strings de Menu principal -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_principal">Menú Principal</string>
    <string name="acerca_de">UBUDiabetes 2.0 Aplicación de control de la diabetes en dispositivos móviles.\n\</string>
    <string name="bt_bolo">Calcular bolo</string>
    <string name="main_registro">Registro de glucemias</string>
    <string name="main_historial">Historial de glucemias</string>
    <string name="main_registroIngestas">Consultar Ingestas</string>
    <string name="welcome">Bienvenido</string>


    <!--- Strings de Registro de glucemia -->
    <string name="title_activity_registro_glucemias">Registro de Glucemias</string>
    <string name="tv_glucemia">Introduce el valor de glucemia</string>
    <string name="h_vglucemia">Introduzca el valor de glucemia</string>

    <!--- Strings de Incidencias -->
    <string name="title_activity_incidencias">Incidencias</string>
    <string name="tv_incidencia">Selecciona la causa de la incidencia</string>
    <string name="tv_observaciones">Anote aquí sus observaciones</string>
    <string name="incidencia_correcta">Incidencia registrada correctamente</string>

    <!--- Strings de Historial -->
    <string name="title_activity_historial">Historial de glucemias</string>
    <string name="leyenda_desayuno">Antes de desayunar</string>
    <string name="leyenda_comida">Después de comer</string>
    <string name="leyenda_cena">Antes de cenar</string>
    <string name="leyenda_chart">Valores glucemia última semana</string>
    <string name="sinIncidencia">El valor de glucemia se encuentra dentro de los márgenes aceptables. No hay incidencias.</string>
    <string name="hist_incidencia">Incidencia:</string>
    <string name="hist_observacion">Observaciones:</string>
    <string name="hist_sinobservaciones">No se registraron observaciones para esta incidencia.</string>

    <!--- Strings de Carbohidratos -->
    <string name="consejo_intensidad_alta">Además para su actividad física, tome suplementos (10 a 20gr de hidratos de carbono), preferentemente líquidos cada 30-45 minutos.</string>
    <string name="consejo_intensidad_media">Además debe tomar un suplemento de 15 a 20 gr de hidratos de carbono, y realizar un control a la mitad y al final del ejercicio.</string>
    <string name="consejo_intensidad_irregular">Además no debe administrarse más insulina hasta concluir con la actividad física.</string>
    <string name="bt_mascomida">Añadir otro</string>
    <string name="resultado_bolo">Las unidades de insulina necesarias del bolo corrector son: </string>
    <string name="ingerir_carbohidratos">Nivel de glucemia demasiado bajo. Necesita ingerir carbohidratos.</string>
    <string name="bolo">Bolo corrector</string>
    <string name="title_activity_carbohidratos">Carbohidratos</string>
    <string name="tv_carbohidratos">Selecciona el alimento de la ingesta</string>
    <string name="tv_valorgramos">Introduce la cantidad del alimento (Grs)</string>
    <string name="bt_finalizar">Finalizar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="registro_lista_ingesta_correcta">Lista Ingesta registrada correctamente</string>
    <string name="textregistrando">Registrando datos</string>
    <string name="textregistrofinalizado">Registro finalizado</string>


    <!-- Strings de Perfil (Nuevo) -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datosPersonales">Datos Personales</string>
    <string name="nameUser">Nombre y Apellidos</string>
    <string name="apellidosUser">Apellidos</string>
    <string name="edadUser">Edad</string>
    <string name="alturaUser">Altura (cm)</string>
    <string name="pesoUser">Peso (kg)</string>
    <string name="datosMedicos">Datos Médicos</string>
    <string name="valoresGlucemiadeseados">Valores de Glucemia deseados\n
        \t\t\t(Entre 80 y 250 mg/dl)</string>
    <string name="glu_min">Mínimo</string>
    <string name="glu_max">Máximo.</string>
    <string name="decimalesBolo">Decimales en el Bolo Corrector:</string>
    <string name="decimal_bc_cero">Cero</string>
    <string name="decimal_bc_dos">Uno</string>
    <string name="decimal_bc_tres">Dos</string>
    <string name="image_perfil">Imagen</string>

    <!-- Buscador de Alimentos-->
    <string name="buscaralimento">Buscar alimento</string>
    <string name="tv_selecionAlimento">Seleccione alimento</string>
    <!-- Strings nuevos-Cambios -->
    <string name="listaingesta">Lista de Ingesta:</string>

    <!-- Strings de Registro lista Ingesta-->
    <string name="registros">Registros diarios</string>
    <string name="tv_lv_nombreAlimento">Alimento</string>
    <string name="tv_lv_gr">Cantidad(gr)</string>
    <string name="tv_lv_ig">I.G.</string>
    <string name="title_activity_registro_lista_ingesta">Listas de Ingestas</string>
    <string name="id_rli">Id</string>
    <string name="fecha_rli">Fecha</string>
    <string name="sumHC_rli">HC</string>
    <string name="boloC_rli">Bolo C.</string>
    <!-- Strings de Detalles lista Ingesta-->
    <string name="title_activity_detalles__lista_ingesta">Detalles</string>
    <string name="detalles_lista">Detalles de la Lista</string>
    <string name="id_dli">ID</string>
    <string name="id_lista_dli">Id Lista</string>
    <string name="nomAlimento_dli">Alimento</string>
    <string name="cantidad_dli">Cantidad</string>
    <!-- Strings de Detalles lista Ingesta-->
    <string name="nombrealimento_detallelista">Alimento:</string>
    <string name="cantidad_detallelista">Cantidad:</string>
    <string name="indiceglu_detallelista">I.G:</string>
    <string name="sumHC_detallelista">H.C:</string>
    <string name="title_activity_ajustes">Ajustes</string>
    <!-- Strings de Ajustes-->
    <string name="tv_ajustes_personal">Personal</string>
    <string name="copia_seguridad">Copia de Seguridad</string>
    <string name="comentario_copiaSeguridad">Se realizará una copia de seguridad de sus registros en la memoria de su dispositivo.</string>
    <string name="comentario_eliminarRegistros">¿ Está seguro que desea eliminar sus registros ?</string>
    <string name="title_activity_psadsadasd">psadsadasd</string>
    <!-- Strings de Historial-->
    <string name="buscar">Buscar</string>


</resources>
